feat: 인스턴스 내려가는 이슈로 새롭게 hospitals 테이블에 항목 추가하는 API 추가
- 그 과정에서 HospitalRequest dto 생성
- POST API 를 이용해 쉽게 항목 추가 위해 Swagger 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy:
+        ant_path_matcher
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:8080/db-exercise
@@ -9,7 +13,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     database: mysql
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
 server:
   servlet:
     encoding:
